src/styles/globals.css
/* ... */
      #menu ul a.opener:hover:before, #menu ul span.opener:hover:before {
        color: #f56a6a; }
      #menu ul a.opener.active + ul, #menu ul span.opener.active + ul {
        display: block; }
      #menu ul a.opener.active:before, #menu ul span.opener.active:before {
        -moz-transform: rotate(-180deg);
        -webkit-transform: rotate(-180deg);
        -ms-transform: rotate(-180deg);
        transform: rotate(-180deg); }

#menu > ul > li {
  border-top: solid 1px rgba(210, 215, 217, 0.75);
  margin: 0.5em 0 0 0;
  padding: 0.5em 0 0 0; }
  #menu > ul > li > ul {
    color: #9fa3a6;
    display: none;
    margin: 0.5em 0 1.5em 0;
    padding-left: 1em; }
    #menu > ul > li > ul a, #menu > ul > li > ul span {

/* Dark mode styles */
.dark #wrapper {
  background: #1a1a1a;
}

.dark #main {
  background: #1a1a1a;
}

.dark #sidebar {
  background: #111111 !important;
  border-left: solid 1px #333333;
}

.dark #header {
  border-bottom-color: #f56a6a;
}

.dark .features article .icon {
  color: #f56a6a;
}

.dark .posts article .image img {
  border: solid 1px #333333;
}

.dark blockquote {
  border-left-color: #333333;
}

.dark code {
  background: rgba(255, 255, 255, 0.05);
  border-color: #333333;
}

.dark hr {
  border-bottom-color: #333333;
}

.dark #menu {
  background: #111111;
}

.dark #menu ul a:hover, .dark #menu ul span:hover {
  color: #f56a6a;
}

.dark #menu > ul > li {
  border-top-color: #333333;
}

.dark #sidebar > .inner {
  border-bottom-color: #333333;
}

.dark #sidebar > .inner > * {
  border-bottom-color: #333333;
}

.dark #sidebar > .inner > .alt {
  background-color: #1a1a1a !important;
  border-bottom-color: #333333;
}

.dark #search form input[type="text"] {
  background: #1a1a1a !important;
  border-color: #333333;
  color: #ffffff !important;
}

.dark #search form input[type="text"]:focus {
  border-color: #f56a6a;
}

.dark #search form:before {
  color: #9fa3a6;
}

.dark #menu ul {
  color: #ffffff !important;
}

.dark #menu ul a, .dark #menu ul span {
  color: #ffffff !important;
}

.dark #menu ul a:hover, .dark #menu ul span:hover {
  color: #f56a6a;
}

.dark #menu > ul > li > ul {
  color: #9fa3a6 !important;
}

.dark #menu > ul > li > ul a, .dark #menu > ul > li > ul span {
  color: #9fa3a6 !important;
}

.dark #menu > ul > li > ul a:hover, .dark #menu > ul > li > ul span:hover {
  color: #f56a6a;
}

.dark #menu ul a.opener:before, .dark #menu ul span.opener:before {
  color: #9fa3a6 !important;
}

.dark #menu ul a.opener:hover:before, .dark #menu ul span.opener:hover:before {
  color: #f56a6a;
}

.dark #sidebar h2 {
  color: #ffffff !important;
}

.dark #sidebar .major h2 {
  color: #ffffff !important;
}



      font-size: 0.8em; }
    #menu > ul > li > ul > li {
      margin: 0.125em 0 0 0;
      padding: 0.125em 0 0 0; }
  #menu > ul > li:first-child {
    border-top: 0;
    margin-top: 0;
    padding-top: 0; }

